# marvel-playground

./: README.md
comics-api/: README.md
comics-api/muapi-rs/: .env.sample  Cargo.toml  README.md
comics-api/muapi-rs/examples/: client.rs
my-heroes/: .env.sample  .gitignore  Cargo.toml  README.md
my-heroes/backend/: Cargo.toml
my-heroes/backend/src/: lib.rs
my-heroes/backend/src/db/: mod.rs  models.rs  operations.rs  schema.rs
my-heroes/cli/: Cargo.toml
my-heroes/cli/src/: main.rs
my-heroes/frontend/: Cargo.toml
my-heroes/migrations/2019-09-03-220403_heroes/: up.sql
