[package]
name = "my-heroes-backend"
version = "0.1.0"
authors = ["Tanner Donovan <ttdonovan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.0", features = ["sqlite"] }
dotenv = "0.14.0"