[package]
name = "my-heroes-cli"
version = "0.1.0"
authors = ["Tanner Donovan <ttdonovan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
exitfailure = "0.5.0"
failure = "0.1.0"
my-heroes-backend = { path = "../backend" }
